<resources>
    <string name="app_name">TradeStat</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Trades</string>



    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday_with_rating">Monday — %1$d%%</string>
    <string name="tuesday_with_rating">Tuesday — %1$d%%</string>
    <string name="wednesday_with_rating">Wednesday — %1$d%%</string>
    <string name="thursday_with_rating">Thursday — %1$d%%</string>
    <string name="friday_with_rating">Friday — %1$d%%</string>
    <string name="saturday_with_rating">Saturday — %1$d%%</string>
    <string name="sunday_with_rating">Sunday — %1$d%%</string>

    <string name="strategy">Strategy</string>
    <string name="date">Date</string>
    <string name="instrument">Instrument</string>
    <string name="direction">Direction</string>
    <string name="result">Result</string>
    <string name="add">Add</string>
    <string name="News">News</string>
    <string name="all">All</string>
    <string name="long_positions">Long positions:</string>
    <string name="short_positions">Short positions:</string>
    <string name="calendar">Calendar</string>
    <string name="results">Results</string>
    <string name="analysis">Analysis</string>
    <string name="useful_materials">Useful materials</string>
    <string name="base_strategies_useful_tips">Base, strategies, useful tips</string>
    <string name="win_positions">Win positions:</string>
    <string name="defeat_positions">Defeat positions:</string>
    <string name="time_statistics">Time statistics</string>
    <string name="statistics_on_indicators">Statistics on indicators</string>
    <string name="general_statistics">General statistics</string>
    <string name="including_strategies">Including strategies</string>
    <string name="add_trade">Add trade</string>
    <string name="enter_the_indicator">Enter the indicator:</string>
    <string name="enter_the_strategy">Enter the strategy:</string>
    <string name="enter_a_description">Enter a description:</string>
    <string name="cancel">Cancel</string>
    <string name="graph_of_strategies_rating">Graph of strategies rating</string>
    <string name="rating">Rating</string>
    <string name="amount">Amount</string>
    <string name="graph_of_instrument_rating">Graph of instrument rating</string>
    <string name="news_search">News search</string>
    <string name="enter_a_company_name">Enter a company name</string>
    <string name="description">Description:</string>
    <string name="instruments">Instruments:</string>
    <string name="graph_of_number_of_trades">Graph of number of trades</string>
    <string name="short_number">Short number:</string>
    <string name="long_number">Long number:</string>
    <string name="short_rate">Short rate:</string>
    <string name="long_rate">Long rate:</string>

    <string name="materials_intro">Trading is a high-risk world of financial markets, where there are great opportunities for earning money. However, success in this field requires deep knowledge and continuous improvement of skills. Trading training is a necessity for those who seek to achieve financial independence and stable income in this field. Only with the necessary knowledge and practical experience will you be able to competently manage risks and maximize your income in volatile markets.</string>
    <string name="trading_materials">Trading materials</string>
    <string name="trading_concepts">Trading concepts</string>
    <string name="smart_money_intro">The Smart Money trading strategy remains relevant in today\'s dynamic market. It focuses on identifying and following large capital investments, known as smart money. This strategy assumes that these big players have more information and experience, which gives them an advantage in making the right trading decisions. By combining technical analysis, understanding market behavior and monitoring smart money activity, traders can increase the likelihood of successful trading and maximize profits in various market conditions.</string>
    <string name="tech_analysis_intro">In the dynamic world of trading, understanding technical analysis is an invaluable tool. It gives traders a deep understanding of market dynamics, allowing them to unravel patterns, identify opportunities and make informed decisions. This advantage gives traders confidence and increases their chances of making a profit in the markets. This guide is one of the best among them, as in addition to basic knowledge it gives a genuine understanding of trading.</string>
    <string name="technical_analysis">Technical analysis</string>
    <string name="all_trades">All trades</string>
    <string name="trade_result">Trade result: %1$d (wins - defeats)</string>
    <string name="best_strategy">Best strategy: %1$s</string>
    <string name="best_instrument">Best instrument: %1$s</string>

    <string name="trade_dynamic">The dynamics of trade</string>
    <string name="notes">Notes</string>
    <string name="email">Enter email</string>
    <string name="password">Enter password</string>
    <string name="new_to_here">New to here?</string>
    <string name="sign_up">sign up</string>
    <string name="enter_login">Enter login</string>
    <string name="registry">Registry</string>
    <string name="login">Login</string>
    <string name="continue_mine">Continue</string>

    <string name="upcoming_events">Upcoming events</string>
    <string name="bks_calendar">(BKS calendar)</string>
    <string name="first_news_desc">Current news broken down by date and marked with degrees of importance</string>
    <string name="forex_news">Forex news</string>
    <string name="investing">(Investing)</string>
    <string name="second_desc">Current forex market news,broken down by dates, quotes</string>
    <string name="crypta_news">Crypto news</string>
    <string name="third_news_desc">Current news of the cryptocurrency market broken down by date,quote</string>
    <string name="add_images">Add images</string>
    <string name="add_imaged_description">Here you can add some images if you need it.</string>
    <string name="image_text">Click if you want to add images to the trade</string>

    <string-array name="weekDays">
        <item>Day of the week:</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday </item>
        <item>Saturday</item>
        <item>Friday</item>
    </string-array>
    <string-array name="month_names">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="results">
        <item>Trade result:</item>
        <item>Victory</item>
        <item>Defeat</item>
    </string-array>
    <string-array name="direction">
        <item>Trade direction:</item>
        <item>Short</item>
        <item>Long</item>
    </string-array>

</resources>