<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.analysis.AnalysisActivity">
    <include
        android:id="@+id/include"
        layout="@layout/app_bar"/>

    <TextView
        android:id="@+id/monday_text"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/oxygen"
        android:text="@string/all_trades"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/big_margin"
        android:layout_marginEnd="@dimen/big_margin"
        app:cardCornerRadius="@dimen/card_radius"
        app:layout_constraintBottom_toTopOf="@+id/metrics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.50"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monday_text"
        app:layout_constraintWidth_percent="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@color/background" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/line_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/metrics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/result_text"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"

            android:fontFamily="@font/oxygen"
            android:text="@string/trade_result"
            android:textSize="@dimen/base_text_size" />

        <TextView
            android:id="@+id/strategy_text"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/oxygen"
            android:text="@string/best_strategy"
            android:textSize="@dimen/base_text_size" />

        <TextView
            android:id="@+id/instrument_text"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/oxygen"
            android:text="@string/best_instrument"
            android:textSize="@dimen/base_text_size" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>