<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.usefullMaterials.MaterialsActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/materials_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_margin"
            android:fontFamily="@font/oxygen"
            android:gravity="center"
            android:text="@string/trading_materials"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="@dimen/big_margin"
            app:cardCornerRadius="@dimen/card_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintWidth_percent="0.8">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/first_materials_image" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView3"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/big_margin"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/oxygen"
            android:gravity="center"
            android:text="@string/materials_intro"
            android:textSize="@dimen/base_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image" />

        <TextView
            android:id="@+id/listLabel"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_margin"
            android:fontFamily="@font/oxygen"
            android:gravity="center"
            android:text="@string/trading_concepts"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/first_label"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_margin"
            android:fontFamily="@font/oxygen"
            android:gravity="center"
            android:text="Smart money"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listLabel" />
        <androidx.cardview.widget.CardView
            android:id="@+id/image2"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/big_margin"
            app:cardCornerRadius="@dimen/card_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_label"
            app:layout_constraintWidth_percent="0.8">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/second_materials_image" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/textView5"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/big_margin"
            android:layout_marginTop="@dimen/big_margin"
            android:fontFamily="@font/oxygen"
            android:gravity="center"
            android:text="@string/smart_money_intro"
            android:textSize="@dimen/base_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image2" />
        <TextView
            android:id="@+id/second_label"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_margin"
            android:fontFamily="@font/oxygen"
            android:gravity="center"
            android:text="@string/technical_analysis"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/image3"
            android:layout_width="300dp"
            android:layout_height="225dp"
            android:layout_marginTop="@dimen/big_margin"
            app:cardCornerRadius="@dimen/card_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/second_label"
            app:layout_constraintWidth_percent="0.8">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/third_materials_image" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/textView6"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/big_margin"
            android:layout_marginTop="@dimen/big_margin"
            android:fontFamily="@font/oxygen"
            android:gravity="center"
            android:text="@string/tech_analysis_intro"
            android:textSize="@dimen/base_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>