<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/Background1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.results.ResultsActivity">

    <include
        android:id="@+id/include2"
        layout="@layout/app_bar" />

    <TextView
        android:id="@+id/textView7"
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/oxygen"
        android:gravity="center"
        android:text="@string/trade_dynamic"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <androidx.cardview.widget.CardView
            android:id="@+id/ratingCard"
            android:layout_width="100dp"
            android:layout_height="67dp"
            android:layout_marginStart="@dimen/base_margin"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/black_grey"
            app:cardCornerRadius="@dimen/card_radius">

            <ImageView
                android:id="@+id/rating_ImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@color/background" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:src="@drawable/strategies_icon"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="45dp"
                android:text="@string/strategy"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text_size" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/amountCard"
            android:layout_width="100dp"
            android:layout_height="67dp"
            android:layout_marginStart="@dimen/base_margin"
            android:layout_marginEnd="@dimen/base_margin"

            android:layout_weight="1"
            app:cardCornerRadius="@dimen/card_radius">

            <ImageView
                android:id="@+id/amount_ImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@color/background" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:src="@drawable/instruments_icon"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="47dp"
                android:text="@string/instrument"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text_size" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/chart_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="@dimen/card_radius"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginEnd="@dimen/base_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.55"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/big_margin"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background" />

        <com.github.mikephil.charting.charts.RadarChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:layout_marginEnd="@dimen/base_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chart_card">

        <LinearLayout
            android:id="@+id/parent_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.551"
            tools:layout_editor_absoluteX="3dp">

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>